<resources>
    <string name="app_name">Ital Project</string>
    <string name="confPolitic"><u>Политика конфиденциальности</u></string>
    <string name="designedByLinar"><u>designed by Linar</u></string>
    <string name="client_feedback">Отзывы наших \nклиентов</string>
    <string name="order_proect">Заказывали проект \nу нас?</string>

    <string name="TitlePublic">Публикации</string>
    <string name="Podrob">Подробнее</string>
    <string name="Pbn1">Дизайн однокомнатной квартиры. Я в новой роли : мама - архитектор.дизайнер, в роли консультанта и прораба.</string>
    <string name="Pbn2">На интерьеры повлиял пейзаж за окном, а также интерес хозяина к музыке и дизайну</string>
    <string name="Pbn3">Реализация 2019 г.</string>
    <string name="Pbn4">Проект недели INMYROOM</string>
    <string name="Pbn5">Дизайн интерьера офиса в Москва-Сити в Башне Санкт-Петербург, 61 этаж</string>
    <string name="Pbn6">Интерьер квартиры на Большой Дмитровке в стиле модерн общей площадью 156 м2</string>
    <string name="Pbn7">Проект бани из клееного бруса в КП ГАВРИКРКО</string>
    <string name="Pbn8">Проект недели INMYROOM</string>
    <string name="Pbn9">Конечно, к вопросам строительства нужно подходить без спешки. Но иногда жизненные обстоятельства диктуют жесткие сроки, и затягивать стройку нет возможности.</string>
    <string name="Pbn10">Спроектировать и построить загородный дом немаленьких габаритов задача сама по себе непростая. А если заказчик ещё и просит сделать это меньше, чем за год – она кажется и вовсе неподъёмной. Однако при помощи профессионалов возможным становится практически всё</string>
    <string name="Public1">В гостях: Изумрудный респаун для архитектора</string>
    <string name="Public2">Houzz тур: Квартира в Заречье с видом на лес</string>
    <string name="Public3">Мансарда, стилистика Тюдор и внутренний двор: загородный дом в Подмосковье</string>
    <string name="Public4">Дом для персонала в стиле Тюдоров получился таким уютным, что хозяева сами решили в нем жить</string>
    <string name="Public5">Офис для Зевса</string>
    <string name="Public6">Модерн XXI века</string>
    <string name="Public7">Территория комфорта Деревянный дом с бассейном и сауной</string>
    <string name="Public8">Однушка 40 м², в которой кухня используется в качестве кабинета</string>
    <string name="Public9">Узнали у профи: как построить дом за год</string>
    <string name="Public10">Мансарда, стилистика Тюдор и внутренний двор: загородный дом в Подмосковье</string>
    <string name="TitleHouses">Загородные дома</string>
    <string name="Sale">Заказывали проект у нас?</string>
    <string name="YourFeedback">Оставьте ваш отзыв в форме ниже и мы его опубликуем на нашем сайте</string>
    <string name="Send">Отправить</string>
    <string name="YourName">Ваше имя</string>
    <string name="PhoneNumber">Номер телефона</string>
</resources>