<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.team.CountryHousesActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="84dp"
            android:layout_height="78dp"
            app:srcCompat="@drawable/logo_ital_white_1__1_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:background="@color/btnOrange" />

            <View
                android:id="@+id/imageView4"
                android:layout_width="44dp"
                android:layout_height="2dp"
                android:layout_gravity="right"
                android:layout_marginTop="4dp"
                android:background="@color/btnOrange" />

            <View
                android:id="@+id/imageView5"
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:layout_gravity="right"
                android:layout_marginTop="4dp"
                android:background="@color/btnOrange" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/TitleHouses"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/houseone" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/housetwo" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/housethree" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/housef" />

            <ImageButton
                android:id="@+id/ib_publication"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/housefi" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/housesi" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/housese" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/houseght" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="480dp"
                    android:background="@color/Lin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="435dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="410dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginLeft="50dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">


                            </LinearLayout>


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="80dp"
                            android:text="@string/Sale"
                            android:textColor="@color/white"
                            android:textSize="30dp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/YourFeedback"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/white"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white"
                        android:textSize="15dp" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:background="@drawable/border"
                        android:gravity="center_vertical"
                        android:hint="@string/YourName"
                        android:inputType="textPersonName"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border"
                        android:gravity="center_vertical"
                        android:hint="@string/PhoneNumber"
                        android:inputType="phone"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <androidx.constraintlayout.utils.widget.MotionButton
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/btnOrange"
                        android:text="@string/Send"
                        android:textColor="@color/white" />


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="480dp"
                    android:background="#202020"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="435dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            app:srcCompat="@drawable/logo_ital_white_1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginLeft="50dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView8"
                                    android:layout_width="18dp"
                                    android:layout_height="match_parent"
                                    app:srcCompat="@drawable/rectangle_2" />

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:text="+ 7 (499) 409-16-12"
                                    android:textColor="@color/white" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView9"
                                    android:layout_width="18dp"
                                    android:layout_height="match_parent"
                                    app:srcCompat="@drawable/rectangle_15__1_" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:text="italproekt@gmail.com"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/imageButton66"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:srcCompat="@drawable/_06_12_2022_151021" />

                        <ImageButton
                            android:id="@+id/imageButton77"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="48dp"
                            android:layout_marginRight="48dp"
                            app:srcCompat="@drawable/_06_12_2022_151327" />

                        <ImageButton
                            android:id="@+id/imageButton88"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="48dp"
                            app:srcCompat="@drawable/_06_12_2022_151406" />

                        <ImageButton
                            android:id="@+id/imageButton99"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:srcCompat="@drawable/_06_12_2022_151437" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        app:srcCompat="@drawable/line_13" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Информация"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="+"
                            android:textColor="@color/white"
                            tools:ignore="TouchTargetSizeCheck" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/line_13" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button2"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/confPolitic"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button3"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/designedByLinar"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>